--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</p>
 			</div>
 			<div class = "flex-item">
-				<img src="img/omakuva.jpg" height="260px">
+				<img src="img/omakuva.JPG" height="260px">
 			</div>
 			<div class = "flex-table" id="kurssit">
 				<table>
