--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 	<head>
 		<link rel="stylesheet" href = "style.css">
 		<title>Johdatus verkkojulkaisemiseen</title>
+		
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-WRJX5H54JT"></script>
+		<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+
+			  gtag('config', 'G-WRJX5H54JT');
+		</script>
+		
 	</head>
 	<body>
 		<script src="menu.js"></script>
